<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#613F3F"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="1044dp"
        android:layout_height="184dp"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:background="#F6B2B2"
        android:fontFamily="@font/barriecito"
        android:minHeight="48sp"
        android:text="@string/michelin_metric"
        android:textAlignment="center"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="1040dp"
        android:layout_height="935dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="316dp"
            android:orientation="horizontal"></LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_up_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#ED8E8E"
                    android:text="@string/pos1"
                    android:textColor="#4A1616"
                    android:textSize="90sp"
                    app:iconPadding="80dp" />

                <Button
                    android:id="@+id/button_up_mid"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:backgroundTint="#ED8E8E"
                    android:text="@string/pos2"
                    android:textColor="#4A1616"
                    android:textSize="90sp" />

                <Button
                    android:id="@+id/button_up_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#ED8E8E"
                    android:text="@string/pos3"
                    android:textColor="#4A1616"
                    android:textSize="90sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="223dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_down_mid"
                    android:layout_width="346dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#ED8E8E"
                    android:text="@string/pos4"
                    android:textColor="#4A1616"
                    android:textSize="90sp" />

                <Button
                    android:id="@+id/button_down_left"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:backgroundTint="#121212"
                    android:text="@string/Discard"
                    android:textSize="90sp" />

                <Button
                    android:id="@+id/button_down_right"
                    android:layout_width="346dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#ED8E8E"
                    android:text="@string/pos5"
                    android:textColor="#4A1616"
                    android:textSize="90sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="?android:attr/listChoiceIndicatorMultiple"
        android:buttonTint="#F3D1D1"
        android:checked="false"
        android:focusable="auto"
        android:text="@string/checkbox"
        android:textAlignment="center"
        android:textColor="#FFCCBC"
        android:textSize="60sp"
        app:buttonIconTint="#CA845F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.116" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="1001dp"
        android:layout_height="205dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>